--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-nav {
+body {
+    background-color: #070709;
+}
 
+nav {
+    background-color: #1E53A3;
+    color: white;
+    width: 100%;
+}
+
+ul {
+    margin: 0%;
+    padding: 1%;    
+}
+
+li {
+    list-style-type: none;
+    display: inline-block;
 }
