--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
-    background-color: #070709;
+    background-image: url("images/Jiggies.svg");
+    background-size: 20%;
+    background-repeat: repeat;
+    margin: 0;
 }
 
 nav {
@@ -10,10 +13,18 @@ nav {
 
 ul {
     margin: 0%;
-    padding: 1%;    
+    padding: 1%;
+    display: flex;
+    justify-content: center;
 }
 
 li {
     list-style-type: none;
-    display: inline-block;
+    padding-left: 1%;
+    flex-direction:row;
+    color: #7bb0ff;
+}
+li:hover {
+    color: #FFFFFF;
+    
 }
