--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ nav {
     background-color: #1E53A3;
     color: white;
     width: 100%;
+    font-family: "Comic Neue", cursive;
+    font-weight: 700;
+    font-style: normal;
 }
 
 ul {
