--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     margin: 0;
 }
 
+/* Navigation */
+
 nav {
     background-color: #1E53A3;
     color: white;
@@ -24,7 +26,7 @@ ul {
     margin: 0%;
     padding: 0.5% 3% 0.5% 0%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 li {
@@ -42,11 +44,102 @@ li:selected {
     color: red;
 }
 
-#searchbar {
+/* Searchbar Container */
+
+#searchcontainer {
     width: 80%;
     padding: 1%;
     margin: auto;
-    justify-content: center;
     border-radius: 0 0 15px 15px;
-    background-color: #1b1e23;    
+    background-color: #181b1f;
+}
+
+/* searchbar items */
+
+label {
+    flex-direction: row;
+    flex-wrap:nowrap;
+    
+}
+
+.forminputs {
+    display:flex;
+}
+
+input {
+    background-color: #0f1115;
+    border-color:  #0f1115;
+    border-width: 0px;
+    border-radius: 10px;
+    width: 100%;
+    height: 27px;
+    caret-color: white;
+    font-family: "Comic Neue", cursive;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 10px;
+    background-image: url("images/Token.ico");
+    background-size: 20px;
+    background-repeat: no-repeat;
+}
+
+/* Slider */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
