--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
     background-size: 20%;
     background-repeat: repeat;
     margin: 0;
+    font-family: "Comic Neue", cursive;
+    font-weight: 700;
+    font-style: normal;
 }
 
 /* Navigation */
@@ -11,9 +14,6 @@ nav {
     background-color: #1E53A3;
     color: white;
     width: 100%;
-    font-family: "Comic Neue", cursive;
-    font-weight: 700;
-    font-style: normal;
     display: flex;
     justify-content: center
 }
@@ -44,6 +44,15 @@ li:selected {
     color: red;
 }
 
+nav ul li a {
+    color: #7bb0ff;
+    text-decoration:none; 
+}
+
+nav ul li a:hover {
+    color: white;
+}
+
 /* Searchbar Container */
 
 #searchcontainer {
@@ -52,6 +61,8 @@ li:selected {
     margin: auto;
     border-radius: 0 0 15px 15px;
     background-color: #181b1f;
+    filter: drop-shadow(0px 15px 10px #000000);
+    z-index: -1;
 }
 
 /* searchbar items */
@@ -83,7 +94,22 @@ input {
     background-repeat: no-repeat;
 }
 
-/* Slider */
+/* Tags Container */
+
+#tagscontainer {
+    width: 78%;
+    background-color: #1b1e23;
+    border-radius: 0 0 25px 25px;
+    margin: auto;
+}
+
+p {
+    padding: 1% 0 1% 3%;
+    color: white;
+    margin: 0%;
+}
+
+/* Searchbar Slider for Sort */
 
 .switch {
   position: relative;
@@ -142,4 +168,22 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+/* Mods Container */
+
+#modscontainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+}
+
+.mods {
+    width: 10%;
+    flex-direction: row;
+    justify-content: center;
+    border-color: black;
+    background-color: grey;
+    margin: auto;
 }
